27 Oct, 2018
update: update forum_config min_delete_view_class when adding/removing classes
update: edit topic, post reply to use same html
fix: forum signatures
fix: forum attachments
fix: update forum classes when adding/removing classes
fix: autoshout for new topics/replies
fix: memcached stats when using sockets
fix: polls
update: README
update: allow memcached to use sockets
update: allow mysqli to use sockets
remove: avatar folder, not used here
fix: typo ann_config.php
add: missing HnR settings from ann_config.php
fix: call incorrect method name announce.php

26 Oct, 2018
update: version to v0.4
fix: call to wrong method takelogin.php
fix: send message to user when login failed takelogin.php
update: show client and peer id view_peers.php
remove: unused/duplicate functions scrape.php
fix: divide by 0 annoounce.php
fix: non numeric rating function_imdb.php
fix: display peer_id allagents.php
update: triviaq questions, removed dupes
update: many cleanup scripts to FluentPDO, reduce number of queries
rename: column 12_hour to use_12_hour
update: FluentPDO, autoprefixer, browserslist
update: easier to update/add stats stats.php
update: use FluentPDO bans.php, upgrade_database.php
update: many timestamp columns to unsigned int
add: added column to topics table
change: sort order for cleanup processing cron_controller.php
update: delete deleted messages also, only update caches if cache already exists Message.php
update: check if torrent exists before deleting Torrent.php
remove: stats table, no need to store these stats in db
remove: readpost_update.php can't see any reason to reset a users read post history every 2 weeks

22 Oct, 2018
fix: check if REQUEST_URI is empty, mainly for running cron_controller.php from cli
fix: update user birthday_update.php
remove: insert method User.php
fix: don't show pager menu when only 1 page reports.php 
fix: division by 0 pu_update.php

21 Oct, 2018
fix: get from array happyhour_update.php