@@ -1,4 +1,6 @@
 27 Oct, 2018
+fix: removed columns snatches.php
+fix: seeders/leechers getting correct count torrents_update.php
 update: update forum_config min_delete_view_class when adding/removing classes
 update: edit topic, post reply to use same html
 fix: forum signatures
